# appeals

./: .env.template  README.md  pyproject.toml
appeals/: asgi.py  settings.py  urls.py  wsgi.py
appeals/api/: v1.py
cauth/: admin.py  manager.py  models.py
cauth/migrations/: 0001_initial.py
core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_appeal_created_at.py  0003_rename_owner_appeal_user.py  0004_rename_user_appeal_owner.py
docker/: backend.dockerfile  docker-compose.yaml
script/: entrypoint.sh
